--- a/work_de.html
+++ b/work_de.html
@@ -143,35 +143,35 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_31.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_32.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_33.png" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_35.JPG" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_40.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diplom mit Prof. Momoyo Kaijima, ETHZ</div>
+                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diplom mit Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_41.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diplom mit Prof. Momoyo Kaijima, ETHZ</div>
+                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diplom mit Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_42.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diplom mit Prof. Momoyo Kaijima, ETHZ</div>
+                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diplom mit Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_50.gif" alt="LINYER Bild" class="hover-img" />
@@ -191,19 +191,23 @@
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_80.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Letzte Runde für den Wettbewerb Europan 18 mit Studio Era<br/>Gottsunda, Uppsala, Schweden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_81.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Letzte Runde für den Wettbewerb Europan 18 mit Studio Era<br/>Gottsunda, Uppsala, Schweden</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Letzte Runde für den Wettbewerb Europan 18 mit Studio Era<br/>Gottsunda, Uppsala, Schweden</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_83.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Letzte Runde für den Wettbewerb Europan 18 mit Studio Era<br/>Gottsunda, Uppsala, Schweden</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_84.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Letzte Runde für den Wettbewerb Europan 18 mit Studio Era<br/>Gottsunda, Uppsala, Schweden</div>
             </div>
         </div>
     </div>
