--- a/work_sv.html
+++ b/work_sv.html
@@ -178,39 +178,39 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_30.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">"DER HOLLÄNDER"<br/>sammarbete Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_31.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_32.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_33.png" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">"DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_40.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ</div>
+                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_41.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ</div>
+                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_42.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ</div>
+                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_50.gif" alt="LINYER Bild" class="hover-img" />
@@ -230,19 +230,23 @@
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_80.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_81.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_83.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
+            </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_84.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
         </div>
     </div>
