--- a/contact_de.html
+++ b/contact_de.html
@@ -26,7 +26,7 @@
     <div class="contact-content">
     <img src="img/CONTACT_03.png" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
     <br/>
-        LINYER ist ein Architekturbüro mit Sitz in Stockholm und Zürich, gegründet und betrieben von Lowis Gujer und Emma Lindén seit 2024. Obwohl ihr Hauptfokus auf lokalen und kleinen Projekten liegt, umfasst ihr Interesse eine breite Palette von Themen wie Entwürfe für öffentliche Gebäude und Bildungseinrichtungen, konstruktive Detaillösungen im Maßstab 1:1, Visualisierung von Ideen durch Illustrationen und Modelle, Stadtplanung und Schreiben. In ihrem Ansatz suchen sie stets den Dialog mit allen Beteiligten, da jeder Gedanke zur Entwicklung einer Idee beitragen kann. Neben ihrem Engagement für LINYER sind beide auch in anderen Projekten aktiv. Lowis ist als wissenschaftlicher Assistent am Lehrstuhl für Architectural Behaviorology bei Prof. Momoyo Kaijima am Institut für Design und Architektur D-ARCH ETHZ tätig. Emma arbeitet als Projektleiterin für SAKKE Studio in den frühen Projektphasen.<br/>
+        LINYER ist ein Architekturbüro mit Sitz in Stockholm und Zürich, gegründet und betrieben von Lowis Gujer und Emma Lindén seit 2024. In ihrem Schaffen legen sie den Fokus auf kleine Projekte mit lokalen Akteuren und natürlichen Baumaterialien. Oftmals sind sie auf der Suche nach architektonischer Formgebung, die mit den vorliegenden Ressourcen zusammenhängen: Weiterbauen, Wiederverwenden, und wenn Neu, dann mit biogenen Baumaterialien wie zum Beispiel Holz. Ihr Interessen umfassen eine breite Palette von Themen wie Entwürfe für öffentliche Gebäude und Bildungseinrichtungen, konstruktive Detaillösungen im Massstab 1:1, Visualisierung von Ideen durch Illustrationen und Modelle, Lehre und öffentliche Workshops, Stadtplanung und Schreiben. Neben ihrem Engagement für LINYER sind beide auch in anderen Projekten aktiv. Lowis ist als wissenschaftlicher Assistent am Lehrstuhl für Architectural Behaviorology bei Prof. Momoyo Kaijima am Institut für Design und Architektur D-ARCH ETHZ tätig. Emma arbeitet als Projektleiterin für SAKKE Studio in den frühen Projektphasen.<br/>
         <br/>
         Emma Lindén (geb. 1994, Stockholm SE) ist Architektin SAR/MSA. Während ihres Studiums an der Königlichen Technischen Hochschule Stockholm absolvierte sie ein Austauschjahr an der ETHZ. Sie arbeitete für General Architecture, Lütjens Padmanabhan, Maich Swift und Boltshauser Architekten, bevor sie zu SAKKE Studio wechselte.<br/>
         <br/>
@@ -37,16 +37,112 @@
         4. OG Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
-    <span>LINKS</span>
-        <a href="https://www.sakke.ch">- Sakke Studio</a>
-        <a href="https://www.kaijima.arch.ethz.ch">- Lehrstuhl für Architectural Behaviorology, Prof. Momoyo Kaijima, D-ARCH, ETHZ</a>
-        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">- Die Säulenhalle: Endlich ein Zentrum für Zürich West!</a>
-        <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">- Eine Stadt ohne Schlachthof?</a>
-        <a href="https://trans.ethz.ch/issue/time">- trans magazin #42 TIME</a>
-        <a href="https://trans.ethz.ch/issue/fire-1">- trans magazin #41 FIRE</a>
+    <span>PROJEKTLISTE</span>
+        2504 - HUSA<br/>
+        Renovation eines Blockhauses in Hälsingland, Schweden, 2025, Studie<br/>
+        Bauherrschaft: Privat<br/>
         <br/>
-    <span>ZUSAMMENARBEIT</span>
-        Dalla Santa Birkeland Arkitekter, Nando von Arb, Lauro Nächt, Beatrice Kiser, Lars Ruge, Hochparterre, IGHZH, Stiftung Hamasil, trans magazin, 
+        2503 - BORTSÄNKES MOT NEDMONTERING<br/>
+        Bewerbung für das Einar Mattson Stipendium, ArkDes, Stockholm, Schweden, 2025, Bewerbung<br/>
+        <a href="https://www.contemfurniture.com/">mit Unterstützung von CONTEM</a>
+        <br/>
+        2502 - GOTTSUNDA SKOG<br/>
+        600 Wohneinheiten, Kindergarten und Umbau des Gottsunda Center in Uppsala, Schweden, 2025, Wettbewerb (letzte Runde)<br/>
+        Landschaftarchitektur: Studio Era<br/>
+        Bauherrschaft: Uppsala Kommun / Hemmaplan<br/>
+        <br/>
+        2406 - FH SAMUN<br/>
+        Renovation eines Ferienhauses in Falera, Schweiz, 2024, In Planung<br/>
+        Bauherrschaft: Privat<br/>
+        <br/>
+        2405 - SOCIAL LOFT<br/>
+        Wohnungsbau mit Re-Use Konzept in Basel, Schweiz, 2024, Wettbewerb<br/>
+        mit Alois Merkt und Zoé Rüttimann<br/>
+        Bauherrschaft: SBB Immobilien<br/>
+        <br/>
+        2404 - AUFSTOCKEN UND ERGÄNZEN<br/>
+        Wohnungsbau in Zürich, Schweiz, 2024, Wettbewerb<br/>
+        Landschaftsarchitektur: Lars Ruge
+        Bauherrschaft: Baugenossenschaft Waidberg BGW<br/>
+        <br/>
+        2403 - DER HOLLÄNDER<br/>
+        Musikschule und Vereinszentrum in Zug, Schweiz, 2024, Wettbewerb<br/>
+        mit Dalla Santa Birkeland Arkitekten<br/>
+        Landschaftsarchitektur: Lauro Nächt<br/>
+        Bauleitung: Bauseits Partner AG<br/>
+        Bauingenieur: Synaxis AG<br/>
+        HLKS: 3-Plan AG<br/>
+        Brandschutz: Zostera Brandschutzplanung GmbH<br/>
+        Bauherrschaft: Einwohnergemeinde Cham<br/>
+        <br/>
+        2402 - RINGELREIHE<br/>
+        Doppelkindergarten in Wil, St. Gallen, Schweiz, 2024, Wettbewerb<br/>
+        Landschaftsarchitektur: Simone Pietscher<br/>
+        Bauingenieur: Saman Hekmati<br/>
+        Bauherrschaft: Stadt Wil<br/>
+        <br/>
+        2401 - WANDLER<br/>
+        Stadthaus in Romanshorn, Schweiz, 2024, Wettbewerb<br/>
+        Landschaftsarchitektur: Beatrice Kiser<br/>
+        Bauherrschaft: Stadt Romanshorn<br/>
+        <br/>
+        2202 - ÄLVSALA<br/>
+        Renovation und Erweiterung eines Ferienhauses in Värmdö, Schweden, 2022, Studie<br/>
+        Bauherrschaft: Privat<br/>
+        <br/>
+        2201 - BJÖRKVIK<br/>
+        Umbau und Erweiterung eines Ferienhauses in Värmdö, Schweden, 2022, Studie<br/>
+        Bauherrschaft: Privat<br/>
+        <br/>
+        2101 - HAUS FÜR ZWEI BRÜDER<br/>
+        Ferienhaus in Dalarna, Schweden, 2021, Realisiert<br/>
+        Bauherrschaft: Privat<br/>
+        <br/>
+    <span>LEHRE</span>
+        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
+        Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025
+        <br/>
+        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>BAMBUS GEWÄCHSHAUS</a>
+        Lehrassistent für den Workshop im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025
+        <br/>
+        <a href="https://kaijima.arch.ethz.ch/news/call-for-focus-work-climate-kitchen/"></a>KLIMA KÜCHE</a>
+        Lehrassistent für den Workshop im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025
+        <br/>
+        <a href="https://systems.arch.ethz.ch/studios-workshops/design-for-climate-202"></a>DESIGN FOR CLIMATE</a>
+        Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
+        <br/>
+        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>JAPAN STUDIO 2 "CARE HUBS"</a>
+        Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
+        <br/>
+        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>PUBLIC SPACE BEHAVIOROLOGY</a>
+        Lehrassistent für den Entwurfskurs im zweiten Jahr am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
+        <br/>
+    <span>PUBLIKATION</span>
+        BERGDÖRFER UND IHRE MÖGLICHE ENTWICKLUNG<br/>
+        Interview in der Lokalzeitung "Pöschtli" über das Japan Studio 3 "STONE, WOOD, SOIL" im Rahmen des Lehrprojekts Domleschg, Schweiz, 2025<br/>
+        mit Stefan Kurath, Thomas Weiss, Michael Wagner, Oscar Buscon, Kees Christiaanse
+        <br/>
+        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - DIE SÄULENHALLE: Endlich ein Zentrum für Zürich West!</a>
+        Arbeitsgruppe und Illustrationen für ein Themenheft des Architekturmagazins Hochparterre, Zürich, Schweiz, 2025<br/>
+        Arbeitsgruppe: Martin Hofer (Architekt und Immobilienfachmann, Leiter und Konzeptverfasser), Köbi Gantenbein (Soziologem, Leiter und Sekretär), Dominique Ghiggi (Landschaftsarchitektin, Ghiggi Paesaggi Landschaft und Städtebau, Zürich), Christoph Gysi (Präsident der "Vereinigung Industrict Zürich West, aus Industrie wird Kultur", Zürich), Christoph Kellenberger (Architekt und Gründungspartner Büro OOS, Zürich), Markus Knauss (Co-Geschäftsleiter des Verkehrs-Clubs der Schweiz und Gemeinderat), Maresa Kuhn (Stadt- und Projektentwicklerin im Büro Belebung & Begegnung, Zürich), Jordi Riegg (Raum- und Verkehrsplaner im Büro Rombo, Zürich), Alain Thierstein (Stadtentwickler, Delegierter Hamasil Stiftung), Hamasil Stiftung (Auftraggeberin, Finanzierung)<br/>
+        <a href="https://nandovonarb.ch/">Illustrationen mit Nando von Arb</a>
+        <br/>
+        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"Das Interesse der Otelfingen freut uns"</a>
+        Interview in der Lokalzeitung "Furttaler" über das Japan Studio 2 "Care Hubs", Schweiz, 2024<br/>
+        <br/>
+        <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">2302 EINE STADT OHNE SCHLACHTHOF?</a>
+        Artikel für die Campusrubrik des Architekturmagazins Hochparterre, Zürich, Schweiz, 2024<br/>
+        <br/>
+        <a href="https://trans.ethz.ch/issue/time">2301 - TRANS MAGAZIN #42 TIME</a>     
+        Redaktion des Architekturmagazins trans des Architekturdepartements der ETH, Zürich, Schweiz, 2023<br/> 
+        Co-Redaktion: Tatjana Bergmeister, Carolina Catarino Gomes, Zoé Rüttimann<br/>
+        <br/>
+        <a href="https://trans.ethz.ch/issue/fire-1">2203 - TRANS MAGAZIN #41 FIRE</a>
+        Redaktion des Architekturmagazins trans des Architekturdepartements der ETH, Zürich, Schweiz, 2023<br/>
+        Co-Redaktion: Sebastian Baumann, Tatjana Bergmeister, Sophia Garner<br/>
+        <br/>
+        <a href="https://doi.org/10.5169/seals-981501">2102 - WORK IS OVER</a>
+        Artikel für die 38. Ausgabe des Architekturmagazins trans "REPRODUCTION" des Architekturdepartements der ETH, Zürich, Schweiz, 2021<br/>
     </div>
 </body>
 </html>
